GameConfig.cfg: fix for newest TrenchBroom

--- a/Narbacular Drop/GameConfig.cfg
+++ b/Narbacular Drop/GameConfig.cfg
@@ -1,5 +1,5 @@
 {
-	version: 7,
+	version: 9,
 	name: "Narbacular Drop",
 	icon: "Icon.png",
 	"fileformats": [
@@ -9,7 +9,7 @@
 		"searchpath": ".",
 		"packageformat": { "extension": ".pak", "format": "idpak" }
 	},
-	"textures": {
+	"materials": {
 		"root": "textures",
 		"extensions": [".C"],
 		"palette": "gfx/palette.lmp",
